welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:5: error: value += is not a member of Int
      s+=1
       ^